<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">newApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">home</string>
    <string name="addFriends">Add Friends</string>
    <string name="createGroup">Create Group</string>
    <string name="title_activity_group">group</string>
    <string name="GroupName">Group Name</string>
    <string name="GroupMembers">Add Members</string>
    <string name="MembersLabel">Members</string>
    <string name="Privacy">Privacy</string>
    <string name="OpenPrivacy">Open: Anyone can invite members</string>
    <string name="ClosedPrivacy">Closed: Only creator can invite members</string>
    <string name="create">Create</string>
    <string name="ListofFriends">Friends</string>
    <string name="add">Add</string>
    <string name="addedMembers">Added: None</string>
    <string name="memberAddedList">None</string>
    <string name="title_activity_register">register</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="preference_file_key">com.harazim.android.app.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_group_edit">group_edit</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="group">Groups</string>
    <string name="title_activity_edit_group">EditGroupActivity</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="FriendTitle">Friends</string>
    <string name="title_activity_search_username">SearchUsername</string>
    <string name="title_activity_image_add">ImageAddActivity</string>
    <string name="title_activity_test_image_view">TestImageViewActivity</string>

</resources>
